<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background_main"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="18dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/movie_logo_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:src="@drawable/img_movie_details_header"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/movie_logo_image"
            app:layout_constraintEnd_toEndOf="@id/movie_logo_image"
            app:layout_constraintStart_toStartOf="@id/movie_logo_image"
            app:layout_constraintTop_toTopOf="@id/movie_logo_image" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/back_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center_vertical|start"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:src="@drawable/back_button"
                app:tint="@color/gray_dark" />

            <TextView
                android:id="@+id/back_button_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:text="@string/back"
                android:textColor="@color/gray_dark"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/age_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            tools:text="@string/age"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/movie_logo_image"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="268dp"
            android:gravity="start"
            tools:text="@string/movie_name"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/movie_logo_image" />

        <TextView
            android:id="@+id/tag_text"
            android:layout_width="0dp"
            android:layout_marginTop="4dp"
            android:layout_height="match_parent"
            tools:text="@string/movie_tags"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textColor="@color/tag_color"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_text" />


        <ImageView
            android:id="@+id/star_1_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/rating_star"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/count_reviews"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@id/count_reviews"
            app:tint="@color/tag_color" />

        <ImageView
            android:id="@+id/star_2_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="4dp"
            android:src="@drawable/rating_star"
            app:layout_constraintStart_toEndOf="@id/star_1_image"
            app:layout_constraintTop_toTopOf="@+id/star_1_image"
            app:layout_constraintBottom_toBottomOf="@id/star_1_image"
            app:tint="@color/tag_color" />

        <ImageView
            android:id="@+id/star_3_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="4dp"
            android:src="@drawable/rating_star"
            app:layout_constraintStart_toEndOf="@id/star_2_image"
            app:layout_constraintTop_toTopOf="@+id/star_1_image"
            app:layout_constraintBottom_toBottomOf="@id/star_1_image"
            app:tint="@color/tag_color" />

        <ImageView
            android:id="@+id/star_4_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="4dp"
            android:src="@drawable/rating_star"
            app:layout_constraintStart_toEndOf="@id/star_3_image"
            app:layout_constraintTop_toTopOf="@+id/star_1_image"
            app:layout_constraintBottom_toBottomOf="@id/star_1_image"
            app:tint="@color/tag_color" />

        <ImageView
            android:id="@+id/star_5_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="4dp"
            android:src="@drawable/rating_star"
            app:layout_constraintStart_toEndOf="@id/star_4_image"
            app:layout_constraintTop_toTopOf="@+id/star_1_image"
            app:layout_constraintBottom_toBottomOf="@id/star_1_image"
            app:tint="@color/review_gray" />

        <TextView
            android:id="@+id/count_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            tools:text="@string/reviews_count"
            android:textColor="@color/review_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/star_5_image"
            app:layout_constraintTop_toBottomOf="@+id/tag_text"/>

        <TextView
            android:id="@+id/story_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/count_reviews" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/movie_description"
            android:textColor="@color/review_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/story_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/movie_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>