<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/move_frame"
    android:elevation="@dimen/cardview_default_elevation"
    app:layout_constrainedWidth="true">

    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:adjustViewBounds="true"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movie"/>

    <View
        android:id="@+id/gradient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient"
        app:layout_constraintTop_toTopOf="@id/movie_image"
        app:layout_constraintBottom_toBottomOf="@id/movie_image"
        app:layout_constraintStart_toStartOf="@id/movie_image"
        app:layout_constraintEnd_toEndOf="@id/movie_image"/>

    <TextView
        android:id="@+id/pg_text"
        tools:text="13+"
        android:background="@drawable/rounded_view"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:padding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/like_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="@id/movie_image"
        app:layout_constraintTop_toTopOf="@id/movie_image"/>


    <TextView
    android:id="@+id/tag_text"
    android:layout_width="0dp"
    android:layout_marginTop="4dp"
    android:layout_height="match_parent"
    tools:text="@string/movie_tags"
    android:fontFamily="@font/roboto"
    android:textSize="16sp"
    android:textColor="@color/tag_color"
    app:layout_constraintStart_toStartOf="@+id/movie_image"
    app:layout_constraintBottom_toTopOf="@+id/count_reviews"/>

    <ImageView
        android:id="@+id/star1_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/rating_star"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/count_reviews"
        app:layout_constraintStart_toStartOf="@id/movie_image"
        app:layout_constraintTop_toTopOf="@id/count_reviews"
        app:tint="@color/tag_color" />

    <ImageView
        android:id="@+id/star2_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="4dp"
        android:src="@drawable/rating_star"
        app:layout_constraintStart_toEndOf="@id/star1_image"
        app:layout_constraintTop_toTopOf="@+id/star1_image"
        app:layout_constraintBottom_toBottomOf="@id/star1_image"
        app:tint="@color/tag_color" />

    <ImageView
        android:id="@+id/star3_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="4dp"
        android:src="@drawable/rating_star"
        app:layout_constraintStart_toEndOf="@id/star2_image"
        app:layout_constraintTop_toTopOf="@+id/star1_image"
        app:layout_constraintBottom_toBottomOf="@id/star1_image"
        app:tint="@color/tag_color" />

    <ImageView
        android:id="@+id/star4_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="4dp"
        android:src="@drawable/rating_star"
        app:layout_constraintStart_toEndOf="@id/star3_image"
        app:layout_constraintTop_toTopOf="@+id/star1_image"
        app:layout_constraintBottom_toBottomOf="@id/star1_image"
        app:tint="@color/tag_color" />

    <ImageView
        android:id="@+id/star5_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="4dp"
        android:src="@drawable/rating_star"
        app:layout_constraintStart_toEndOf="@id/star4_image"
        app:layout_constraintTop_toTopOf="@+id/star1_image"
        app:layout_constraintBottom_toBottomOf="@id/star1_image"
        app:tint="@color/review_gray" />

    <TextView
        android:id="@+id/count_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        tools:text="@string/reviews_count"
        android:textColor="@color/review_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/movie_image"
        app:layout_constraintStart_toEndOf="@+id/star5_image"
        app:layout_constraintBottom_toBottomOf="@+id/movie_image"/>

    <TextView
        android:id="@+id/movie_name_text"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_margin="4dp"
        tools:text="@string/movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_image"
        app:layout_constraintStart_toStartOf="@id/movie_image" />

    <TextView
        android:id="@+id/film_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/movie_name_text"
        app:layout_constraintTop_toBottomOf="@id/movie_name_text"
        android:textColor="@color/gray_dark"
        tools:text="180 min"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>